<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30sp"
    android:paddingLeft="12sp"
    android:paddingRight="12sp"
    android:paddingTop="30sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="12dp"
        android:text="@string/titleWelcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="122dp"
        android:src="@drawable/pequenossaltamontes" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btnRegister" />

    <Button
        android:id="@+id/btnStatistics"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/btnRegister"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btnStatistics" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/btnStatistics"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btnHelp" />

</RelativeLayout>


