<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30sp"
    android:paddingLeft="12sp"
    android:paddingRight="12sp"
    android:paddingTop="30sp"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/titleHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:text="@string/nameSchool"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/subTitleHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="12dp"
        android:text="@string/subTitleHelp"
        android:textAlignment="textEnd"
        android:textColor="@color/dark_grey"
        android:textSize="25dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="-104dp"
        android:text="@string/textHelp"
        android:textAlignment="textEnd"
        android:textColor="@color/light_grey"
        android:textSize="23dp" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/arrow_back" />

</RelativeLayout>